Added website title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="techworksWeb">
 <head>
-  <title></title>
+  <title>Youth Web, Mobile, and Software Developer Academy | Tech Works</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
   <link href="app.less" type="text/css" rel="stylesheet/less">
