Changed home state

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="techworksWeb">
 <head>
-  <title>Youth Web, Mobile, and Software Developer Academy | Tech Works</title>
+  <title>Youth Web, Mobile, and aftSoftware Developer Academy | Tech Works</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
   <link href="app.less" type="text/css" rel="stylesheet/less">
@@ -28,6 +28,7 @@
 
   <!-- Main App JS -->
   <script src="app.js"></script>
+  <script src="app/states/home/home.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
